Fixing some small changes and trying to work on drag compatibility on mobile devices 6

--- a/style.css
+++ b/style.css
@@ -405,6 +405,7 @@ body{
 
 .lyric-container {
   width: 42rem;
+  position: relative;
 }
 
 #fixed-bottom {
